<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".languages.LanguagesActivity">

    <LinearLayout
        android:id="@+id/language_selectLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="44dp"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />


        <Button
            android:id="@+id/arabic_request_button"
            android:layout_marginTop="24dp"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape_shadow_white"
            android:textColor="@color/darkgray"
            android:paddingVertical="30dp"
            android:text="@string/arabic_world"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/english_request_button"
            android:layout_marginTop="24dp"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape_shadow_white"
            android:textColor="@color/darkgray"
            android:paddingVertical="30dp"
            android:text="@string/english_world"
            android:textAllCaps="false"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>