<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context="com.pclink.attendance.system.TabRequest.ExcuseRequestFragment">

    <LinearLayout
        android:id="@+id/excuse_linerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_above="@+id/reasonExcuse_label"
                android:layout_alignParentStart="true"
                android:gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/excuse_request"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/reasonExcuse_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/reason_excuse_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingLeft="15dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/default_list_selected"
                android:textColor="@color/button_select_list_reason"
                android:background="@drawable/border_selected_list"
                android:drawableRight="@drawable/ic_drop_down_select"
                android:drawablePadding="10dip"
                />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="6dp"
                    android:layout_marginTop="10dp"
                    >

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/date_day_excuse_imageView"
                            android:layout_marginVertical="16dp"
                            android:layout_width="161dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_date_event_black_64dp"

                            />

                        <TextView
                            android:visibility="gone"
                            android:id="@+id/display_date_textView"
                            android:layout_width="161dp"
                            android:layout_height="18dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/date_format"
                            android:layout_marginBottom="16dp"

                            />

                    </LinearLayout>



                </androidx.cardview.widget.CardView>








            <EditText
                android:id="@+id/input_reason_editText"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_reason"
                android:inputType="textMultiLine"
                android:textColorHint="@color/colorPrimary"

                android:imeOptions="actionNext"/>

        </LinearLayout>

        <!-- Buttons  group -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_excuse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_red_fire"
                android:text="@string/back_btn"
                android:textColor="@color/colorWhite"
                android:drawableLeft="@drawable/ic_back_previous"
                android:padding="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/submit_excuse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_rounded"
                android:textColor="@color/colorWhite"

                android:text="@string/submit"
                android:drawableRight="@drawable/ic_submit_send"
                android:padding="10dp"
                />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>