<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context=".TabRequest.VacationRequestFragment">
    <LinearLayout
        android:id="@+id/vacation_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/vacation_request"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/vacation_balance"
                    android:layout_gravity="center"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/vac_days_txt"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_gravity="center"
                    android:textColor="@color/darkgray"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/reasonExcuse_label"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:layout_gravity="center"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/reason_vacation_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border_selected_list"
                    android:drawableRight="@drawable/ic_drop_down_select"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/default_list_selected"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                >


                <TextView
                    android:id="@+id/start_for_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/from_date"
                    android:textColor="@color/colorAccent"
                    />
                <TextView
                    android:id="@+id/start_vacation_date_display_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/date_format" />
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="6dp"
                    >
                    <ImageView
                        android:id="@+id/date_start_vacation_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_date_event_black_64dp"
                     />

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/end_to_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:text="@string/to_date" />

                <TextView
                    android:id="@+id/to_end_vacation_date_display_textView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:text="@string/date_format" />

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="6dp"
                    >
                    <ImageView
                        android:id="@+id/date_end_vacation_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_date_event_black_64dp"
                        />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/note_balance_lyout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/notes" />
                <TextView
                    android:id="@+id/notes_message_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/darkgray"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <Button
                android:id="@+id/back_vacation_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_red_fire"
                android:text="@string/back_btn"
                android:textColor="@color/colorWhite"
                android:drawableLeft="@drawable/ic_back_previous"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/submit_vication_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_rounded"
                android:layout_weight="1"
                android:text="@string/submit"
                android:drawableRight="@drawable/ic_submit_send"
                android:padding="10dp" />

        </LinearLayout>
    </LinearLayout>


</FrameLayout>