<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.pclink.attendance.system.Activities.SignIn">
<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1" />

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        app:srcCompat="@mipmap/title" />

</RelativeLayout>


<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.5" />

<EditText
    android:id="@+id/userId_inp_editText"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:layout_marginBottom="10dp"
    android:layout_weight="1"
    android:ems="10"
    android:hint="@string/userId"
    android:inputType="numberDecimal" />


<EditText
    android:id="@+id/password_inp_editText"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:layout_marginBottom="10dp"
    android:layout_weight="1"
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textPassword" />


<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1" />

<ProgressBar
    android:id="@+id/progressBar1"
    style="?android:attr/progressBarStyleLarge"
    android:visibility="gone"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:layout_marginBottom="10dp"
    android:layout_weight="1"
    android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_rounded"
            android:gravity="center"
            android:paddingHorizontal="50dp"
            android:text="@string/SignIn"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>


<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1" />


</LinearLayout>
